--- a/src/components/Result/Result.css
+++ b/src/components/Result/Result.css
@@ -2,7 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .content {
@@ -11,31 +13,110 @@
     padding: 25px;
     border: 1px solid #A3A3A3;
     border-radius: 8px;
-    height: 700px;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
-    position: relative
+    gap: 30px;
+    background-color: #fff;
 }
 
-.resultContent {
+.starReview {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 20px;
-    width: 815px;
+    justify-content: space-around;
+    gap: 60px;
 }
-.productTitle{
+
+.productTitle {
     font-size: 26px;
     font-family: Crimson Text;
-font-weight: 400;
-font-style: Regular;
-font-size: 26px;
-line-height: 100%;
-letter-spacing: 6%;
-text-align: center;
-text-transform: uppercase;
+    text-transform:uppercase;
+}
 
+.productsGrid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr) !important;
+    gap: 20px;
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.productCard {
+    background-color: white;
+    border: 1px solid #A3A3A3;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    min-height: 380px;
+}
+
+.productName {
+    font-family: Crimson Text;
+    font-weight: 600;
+    font-style: SemiBold;
+    font-size: 18px;
+    line-height: 100%;
+    letter-spacing: 0%;
+}
+
+.reviewText{
+    color: #BABABA;
+    font-size: 16px;
+}
+.productDesc{
+    font-size: 18px;
+    margin-bottom: 15px;
+    word-wrap: break-word; 
+    overflow-wrap: break-word;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.productImg {
+    max-width: 260px;
+    width: 100%;
+    height: 275px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.productItmes {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 20px;
+}
+.cartBtn{
+    background-color: black;
+    gap: 10px;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    width: 261px;
+    height: 38px;
+    font-size: 18px;
+    cursor: pointer;
+    margin-left: 15px;
+}
+@media (max-width: 1100px) {
+ .productsGrid {
+        grid-template-columns: repeat(2, 1fr) !important;
+    }
+}
+
+@media (max-width: 900px) {
+    .productsGrid {
+        grid-template-columns: repeat(2, 1fr) !important;
+    }
+}
+
+@media (max-width: 750px) {
+    .productsGrid {
+        grid-template-columns: 1fr !important;
+        justify-content: center;
+    }
 }
