--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -13,7 +13,8 @@
     padding: 25px;
     border: 1px solid #A3A3A3;
     border-radius: 8px;
-    height: 700px;
+    min-height: 700px;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
